--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,19 @@ jobs:
       env:
         repo: ${{ steps.repo.outputs.repo }}
         digest: ${{ steps.build-push.outputs.digest }}
+
+    - name: Release chart
+      env:
+        registry: ghcr.io/${{ github.repository }}/charts
+      run: |
+        set -euo pipefail
+
+        sed -i "s/CI_VERSION/${semver}/g" charts/mcp-oauth2-proxy/Chart.yaml
+        helm lint charts/mcp-oauth2-proxy
+        helm package charts/mcp-oauth2-proxy
+        helm push mcp-oauth2-proxy-${semver}.tgz oci://${registry} |& grep Digest: | awk '{print $NF}' > digest.txt
+        cosign sign --yes ${registry}/mcp-oauth2-proxy@$(cat digest.txt)
+
   slsa:
     needs: [release]
     permissions:
