--- a/charts/mcp-oauth2-proxy/templates/deployment.yaml
+++ b/charts/mcp-oauth2-proxy/templates/deployment.yaml
@@ -40,7 +40,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: :8080
+              containerPort: 8080
               protocol: TCP
           {{- with .Values.livenessProbe }}
           livenessProbe:
