--- a/charts/mcp-oauth2-proxy/values.yaml
+++ b/charts/mcp-oauth2-proxy/values.yaml
@@ -120,3 +120,32 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+# This section is for setting up the PodMonitor for Prometheus monitoring more information can be found here: https://prometheus-operator.dev/docs/operator/api/#podmonitor
+podMonitor:
+  # Specifies whether a PodMonitor should be created
+  enabled: false
+  # The port name or number to scrape metrics from
+  port: http
+  # The HTTP path to scrape metrics from
+  path: /metrics
+  # How frequently to scrape metrics
+  interval: 30s
+  # Timeout for each scrape
+  scrapeTimeout: 10s
+  # HTTP scheme to use for scraping
+  scheme: http
+  # Whether to honor labels from scraped data
+  honorLabels: false
+  # Whether to honor timestamps from scraped data
+  honorTimestamps: true
+  # Additional labels to add to the PodMonitor
+  labels: {}
+  # Additional annotations to add to the PodMonitor
+  annotations: {}
+  # Metric relabeling configurations
+  metricRelabelings: []
+  # Relabeling configurations
+  relabelings: []
+  # Namespace selector for the PodMonitor
+  namespaceSelector: {}
