--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,8 @@ jobs:
     - run: make docker-build
     - name: Helm lint
       run: |
-        sed -i "s/CI_VERSION/${semver}/g" charts/mcp-oauth2-proxy/Chart.yaml
+        ci_version="0.1.0"
+        sed -i "s/CI_VERSION/${ci_version}/g" charts/mcp-oauth2-proxy/Chart.yaml
         helm lint charts/mcp-oauth2-proxy
         helm package charts/mcp-oauth2-proxy
     - uses: codecov/codecov-action@18283e04ce6e62d37312384ff67231eb8fd56d24 # v5.4.3
