Validate email domains and redirect URLs with regular expressions
Signed-off-by: Matheus Pimenta <matheuscscp@gmail.com>

--- a/charts/mcp-oauth2-proxy/templates/secret.yaml
+++ b/charts/mcp-oauth2-proxy/templates/secret.yaml
@@ -10,6 +10,10 @@ stringData:
     provider:
       {{- toYaml .Values.provider | nindent 6 }}
     {{- end }}
+    {{- if .Values.proxy }}
+    proxy:
+      {{- toYaml .Values.proxy | nindent 6 }}
+    {{- end }}
     {{- if .Values.server }}
     server:
       {{- toYaml .Values.server | nindent 6 }}
