--- a/charts/mcp-oauth2-proxy/templates/deployment.yaml
+++ b/charts/mcp-oauth2-proxy/templates/deployment.yaml
@@ -11,8 +11,9 @@ spec:
       {{- include "mcp-oauth2-proxy.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      {{- with .Values.podAnnotations }}
       annotations:
+        checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
+      {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
