Add networkpolicy to helm chart
Signed-off-by: Matheus Pimenta <matheuscscp@gmail.com>

--- a/charts/mcp-oauth2-proxy/templates/deployment.yaml
+++ b/charts/mcp-oauth2-proxy/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "mcp-oauth2-proxy.labels" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: 1
   selector:
     matchLabels:
       {{- include "mcp-oauth2-proxy.selectorLabels" . | nindent 6 }}
