--- a/charts/mcp-oauth2-proxy/values.yaml
+++ b/charts/mcp-oauth2-proxy/values.yaml
@@ -16,9 +16,6 @@ proxy: # proxy configuration
   allowedRedirectURLs: [] # list of Go regular expressions
   cors: false
 
-# This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
-replicaCount: 1
-
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
   repository: ghcr.io/matheuscscp/mcp-oauth2-proxy
@@ -69,6 +66,14 @@ service:
   type: ClusterIP
   # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
   port: 80
+
+# Network policy settings.
+networkPolicy:
+  create: true
+  ingress:
+    namespaces: []
+    #  - my-mcp-namespace-1
+    #  - my-mcp-namespace-2
 
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
