--- a/charts/mcp-oauth2-proxy/templates/deployment.yaml
+++ b/charts/mcp-oauth2-proxy/templates/deployment.yaml
@@ -33,8 +33,10 @@ spec:
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
-          {{- if .Values.env }}
           env:
+            - name: LOG_LEVEL
+              value: {{ .Values.logging.level }}
+          {{- if .Values.env }}
             {{- toYaml .Values.env | nindent 12 }}
           {{- end }}
           {{- with .Values.securityContext }}
