--- a/charts/mcp-oauth2-proxy/values.yaml
+++ b/charts/mcp-oauth2-proxy/values.yaml
@@ -15,6 +15,9 @@ proxy: # proxy configuration
   disableConsentScreen: false
   allowedRedirectURLs: [] # list of Go regular expressions
 
+logging:
+  level: info # a logrus level
+
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
   repository: ghcr.io/matheuscscp/mcp-oauth2-proxy
